%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!1107 &-4983250514114243618
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 2387045720786995952}
    m_Position: {x: 270, y: 130, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 2387045720786995952}
--- !u!206 &-4716639433146854294
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: player Stand
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: dffa50cfe77e0434bbfa71245b3dd529, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: b1a5e04ae51004842aba06704a6c2903, type: 3}
    m_Threshold: 0.071428575
    m_Position: {x: 0, y: 1.5584013}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: 1c52c953c83c2254a9fa72d50250f028, type: 3}
    m_Threshold: 0.14285715
    m_Position: {x: -1.089123, y: 1.558401}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 1c52c953c83c2254a9fa72d50250f028, type: 3}
    m_Threshold: 0.21428572
    m_Position: {x: 1.089123, y: 1.558401}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: bb141fc9a700c9c4ca7e6dadb8acf24b, type: 3}
    m_Threshold: 0.2857143
    m_Position: {x: -1.7687004, y: 1.558401}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: bb141fc9a700c9c4ca7e6dadb8acf24b, type: 3}
    m_Threshold: 0.35714287
    m_Position: {x: 1.7687004, y: 1.558401}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 1cb8ed3cbba15f0479fbae54e0a963df, type: 3}
    m_Threshold: 0.42857143
    m_Position: {x: 0, y: 5.6623173}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: 1062212255550964e974f3ffb3cbaae3, type: 3}
    m_Threshold: 0.5
    m_Position: {x: -1.6844267, y: 5.662317}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 1062212255550964e974f3ffb3cbaae3, type: 3}
    m_Threshold: 0.5714286
    m_Position: {x: 1.6844267, y: 5.662317}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: f2bed5dc5afacff44a00de8daae9703b, type: 3}
    m_Threshold: 0.64285713
    m_Position: {x: -2.3185368, y: 5.662317}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: f2bed5dc5afacff44a00de8daae9703b, type: 3}
    m_Threshold: 0.71428573
    m_Position: {x: 2.3185368, y: 5.662317}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400014, guid: 6fb3851da6a6f5948ab6892bee8ba920, type: 3}
    m_Threshold: 0.78571427
    m_Position: {x: -2.4658673, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400006, guid: 6fb3851da6a6f5948ab6892bee8ba920, type: 3}
    m_Threshold: 0.85714287
    m_Position: {x: 2.4658673, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400010, guid: 6fb3851da6a6f5948ab6892bee8ba920, type: 3}
    m_Threshold: 0.9285714
    m_Position: {x: -1.3902802, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 6fb3851da6a6f5948ab6892bee8ba920, type: 3}
    m_Threshold: 1
    m_Position: {x: 1.3902802, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  m_BlendParameter: rotation speed
  m_BlendParameterY: move speed
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 3
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: TPS player
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: player pos
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  - m_Name: move speed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  - m_Name: rotation speed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  - m_Name: Vertical speed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  - m_Name: left right leg
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: -4983250514114243618}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &1206366774269652498
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: player Crouch
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: d89ea37480b6d75458aa38843e9688dc, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0.009713505}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400012, guid: d89ea37480b6d75458aa38843e9688dc, type: 3}
    m_Threshold: 0.2
    m_Position: {x: -0.76438105, y: 0}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400010, guid: d89ea37480b6d75458aa38843e9688dc, type: 3}
    m_Threshold: 0.4
    m_Position: {x: 0.7643811, y: 0}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400004, guid: d89ea37480b6d75458aa38843e9688dc, type: 3}
    m_Threshold: 0.6
    m_Position: {x: 0, y: 0.5606808}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400008, guid: d89ea37480b6d75458aa38843e9688dc, type: 3}
    m_Threshold: 0.8
    m_Position: {x: -0.38163382, y: 0.50175834}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400014, guid: d89ea37480b6d75458aa38843e9688dc, type: 3}
    m_Threshold: 1
    m_Position: {x: 0.38163385, y: 0.5017582}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  m_BlendParameter: rotation speed
  m_BlendParameterY: move speed
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 3
--- !u!1102 &2387045720786995952
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: stance
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 3234928940739067819}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!206 &2552276960704480148
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: BlendTree
  m_Childs: []
  m_BlendParameter: player pos
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &3234928940739067819
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: player Idle
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 1206366774269652498}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -4716639433146854294}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 5256056897382283894}
    m_Threshold: 2
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  m_BlendParameter: player pos
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 2
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &4232444945501446039
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: BlendTree
  m_Childs: []
  m_BlendParameter: player pos
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &5256056897382283894
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: player Midair
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: -1939885660463663145, guid: b153709d1a5eb3c4a84b3d61090042b5, type: 3}
    m_Threshold: -5
    m_Position: {x: -1, y: -5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 5151086776150416813, guid: b153709d1a5eb3c4a84b3d61090042b5, type: 3}
    m_Threshold: 0
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 1077083467106422088, guid: b153709d1a5eb3c4a84b3d61090042b5, type: 3}
    m_Threshold: 5
    m_Position: {x: -1, y: 5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -1939885660463663145, guid: b153709d1a5eb3c4a84b3d61090042b5, type: 3}
    m_Threshold: 10
    m_Position: {x: 1, y: -5}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: player pos
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 5151086776150416813, guid: b153709d1a5eb3c4a84b3d61090042b5, type: 3}
    m_Threshold: 15
    m_Position: {x: 1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: player pos
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 1077083467106422088, guid: b153709d1a5eb3c4a84b3d61090042b5, type: 3}
    m_Threshold: 20
    m_Position: {x: 1, y: 5}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: player pos
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: -5059006814000262888, guid: 51dd2e4c869794f75a0df7d54b210214, type: 3}
    m_Threshold: 25
    m_Position: {x: -3, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -7727135423134997463, guid: 51dd2e4c869794f75a0df7d54b210214, type: 3}
    m_Threshold: 30
    m_Position: {x: -5, y: 3}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -5059006814000262888, guid: 51dd2e4c869794f75a0df7d54b210214, type: 3}
    m_Threshold: 35
    m_Position: {x: -4, y: -5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -5059006814000262888, guid: 51dd2e4c869794f75a0df7d54b210214, type: 3}
    m_Threshold: 40
    m_Position: {x: 3, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: player pos
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: -7727135423134997463, guid: 51dd2e4c869794f75a0df7d54b210214, type: 3}
    m_Threshold: 45
    m_Position: {x: 5, y: 3}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: player pos
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: -5059006814000262888, guid: 51dd2e4c869794f75a0df7d54b210214, type: 3}
    m_Threshold: 50
    m_Position: {x: 4, y: -5}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: player pos
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: -6788666626592393668, guid: 51dd2e4c869794f75a0df7d54b210214, type: 3}
    m_Threshold: 55
    m_Position: {x: 0, y: -10}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: player pos
    m_Mirror: 0
  m_BlendParameter: left right leg
  m_BlendParameterY: Vertical speed
  m_MinThreshold: -5
  m_MaxThreshold: 55
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 3
--- !u!206 &7092034858382107408
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: BlendTree
  m_Childs: []
  m_BlendParameter: player pos
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
